--- a/package.json
+++ b/package.json
@@ -13,33 +13,39 @@
     "refine": "refine"
   },
   "dependencies": {
+    "@refinedev/antd": "^5.42.0",
     "@refinedev/cli": "^2.16.21",
     "@refinedev/core": "^4.47.1",
     "@refinedev/devtools": "^1.1.32",
-    "@refinedev/nextjs-router": "^6.0.0",
     "@refinedev/kbar": "^1.3.6",
+    "@refinedev/nextjs-router": "^6.0.0",
+    "@refinedev/react-hook-form": "^4.8.14",
+    "@refinedev/react-router-v6": "^4.5.11",
+    "@refinedev/react-table": "^5.6.6",
+    "@refinedev/simple-rest": "^5.0.1",
+    "@tanstack/react-table": "^8.2.6",
+    "apexcharts": "^3.50.0",
+    "js-cookie": "^3.0.5",
     "next": "^14.1.0",
     "react": "^18.0.0",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18.0.0",
-    "@refinedev/simple-rest": "^5.0.1",
-    "@refinedev/react-hook-form": "^4.8.14",
-    "@refinedev/react-table": "^5.6.6",
-    "@tanstack/react-table": "^8.2.6",
-    "js-cookie": "^3.0.5"
+    "react-icons": "^5.2.1",
+    "react-router-dom": "^6.24.1"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
+    "@types/node": "^18.16.2",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
-    "@types/node": "^18.16.2",
     "@typescript-eslint/parser": "^6.21.0",
-    "typescript": "^5.4.2",
+    "autoprefixer": "^10.4.19",
     "cross-env": "^7.0.3",
     "eslint": "^8",
     "eslint-config-next": "^14.1.0",
-    "tailwindcss": "^3.4.3",
     "postcss": "^8.4.38",
-    "autoprefixer": "^10.4.19",
-    "@types/js-cookie": "^3.0.6"
+    "tailwindcss": "^3.4.3",
+    "typescript": "^5.4.2"
   },
   "refine": {
     "projectId": "rV8sfG-mvEOSx-jJm1Ey"
